<resources>
    <string name="app_name">NDKExample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="save_or_retrieve_value">Save or retrieve a value from the store</string>
    <string name="key">Key:</string>
    <string name="value">Value :</string>
    <string name="type">Type :</string>
    <string name="get_value">Get Value</string>
    <string name="set_value">Set Value</string>
</resources>
